--- a/style/desktop1.css
+++ b/style/desktop1.css
@@ -7,6 +7,8 @@ body {
      height: auto;
 }
 
+/* ------------------------- CONTENT 1  ------------------------- */
+
 header {
      width: 100%;
      height: 90vh;
@@ -14,6 +16,7 @@ header {
      position: relative;
      padding-top: 2vh;
      z-index: 999;
+     overflow: auto;
 }
 
 nav {
