Mengedit file gambar menu

--- a/style/mobile2.css
+++ b/style/mobile2.css
@@ -35,9 +35,9 @@
                box-shadow: -1px 14px 43px -29px rgba(255,150,150,0.94);
           }
 
-          #container5 section{
+          /* #container5 section{
 
-          }
+          } */
 }
 
 @media only screen 
