--- a/style/desktop2.css
+++ b/style/desktop2.css
@@ -118,3 +118,36 @@ main aside img{
      margin-bottom: 0px;
      font-family: sans-serif;
 }
+
+#container6 {
+     width: 80%;
+     margin: auto;
+     margin-top: 4%;
+     display: grid;
+     grid-template-columns: repeat(3, 30%) !important;
+     gap: 30px;
+     justify-content: center;
+}
+
+#container6 section {
+     box-shadow: 1px 1px 20px 0px rgba(0, 0, 0, 0.062);
+     border-radius: 30px;
+     padding: 20px;
+     box-sizing: border-box;
+}
+
+#container6 section div:first-child {
+     width: 100%;
+     height: 30vh;
+}
+
+#container6 section div img{
+     width: 100%;
+     height: 100%;
+}
+
+#container6 section div:last-child {
+     width: 100%;
+     height: 10vh;
+     background-color: red;
+}
