--- a/style/desktop2.css
+++ b/style/desktop2.css
@@ -1,11 +1,16 @@
 /* ------------------------- CONTENT 2  ------------------------- */
+@import url('https://fonts.googleapis.com/css2?family=Arvo:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 
 * {
      margin: 0px;
      padding: 0px;
+     scroll-behavior: smooth;
 }
 
-body {height: 2000px;}
+body {
+     height: 2000px;
+}
 
 header {
      overflow: hidden;
@@ -37,7 +42,7 @@ main aside:last-child h2{
      color: #4D2E06;
      text-shadow: 3px 3px 2px white;
      font-family: 'Alfa Slab One', cursive;
-     font-size: 2.5em;
+     font-size: 2.7em;
      grid-column-end: span 1;
 }
 
@@ -61,6 +66,7 @@ main aside:last-child section button{
      color: white;
      font-size: 0.9em;
 }
+
 
 main aside:last-child section button:first-child{
      background-color: red;
@@ -134,6 +140,7 @@ main aside img{
      border-radius: 30px;
      padding: 20px;
      box-sizing: border-box;
+     cursor: pointer;
 }
 
 #container6 section div:first-child {
@@ -148,6 +155,35 @@ main aside img{
 
 #container6 section div:last-child {
      width: 100%;
-     height: 10vh;
-     background-color: red;
+     height: auto;
+     margin-top: 5%;
+}
+
+#container6 section div:last-child h3{
+     text-align: center;
+     font-size: 1.2em;
+     font-family: 'Roboto', sans-serif;
+     color: #333;
+}
+
+#container6 section div:last-child h3:hover{text-decoration: underline;}
+
+#container6 section div:last-child article {
+     width: 100%;
+     display: grid;
+     grid-template-columns: 30% 30%;
+     justify-content: space-around;
+     margin-top: 5%;
+     font-family: 'Arvo', serif;
+     color: rgb(255, 113, 97);
+}
+
+#container6 section div:last-child article aside{
+     display: flex;
+     height: 100%;
+}
+
+#container6 section div:last-child article aside img{
+     width: 30% !important;
+     height: 100%;
 }
