--- a/style/desktop2.css
+++ b/style/desktop2.css
@@ -1,6 +1,7 @@
 /* ------------------------- CONTENT 2  ------------------------- */
 @import url('https://fonts.googleapis.com/css2?family=Arvo:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
 
 * {
      margin: 0px;
@@ -9,7 +10,7 @@
 }
 
 body {
-     height: 2000px;
+     height: 3000px;
 }
 
 header {
@@ -186,4 +187,112 @@ main aside img{
 #container6 section div:last-child article aside img{
      width: 30% !important;
      height: 100%;
+}
+
+#container7 {
+     width: 75%;
+     height: 300px;
+     margin: auto;
+     display: block !important;
+     text-align: center;
+     margin-top: 8%;
+}
+
+#container7 h1 {
+     font-family: 'Fjalla One', sans-serif;
+     font-size: 2.5em;
+     color: rgb(255, 92, 74);
+}
+
+#container7 #specialDealsContainer {
+     width: 100%;
+     display: grid;
+     grid-template-columns: 100% !important;
+     gap: 30px;
+     margin-top: 4%;
+}
+
+#container7 #specialDealsContainer .boxDeals {
+     width: 100%;
+     height: 100%;
+     border-radius: 30px;
+     box-shadow: 1px 1px 20px 0px rgba(255, 150, 150, 0.226);
+     padding: 20px;
+     box-sizing: border-box;
+}
+
+#container7 #specialDealsContainer .boxDeals article{
+     width: 100%;
+     display: grid;
+     grid-template-columns: 45% 55%;
+}
+
+#container7 #specialDealsContainer .boxDeals article aside{
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+}
+
+#container7 #specialDealsContainer .boxDeals article aside h3{
+     font-family: Roboto, sans-serif;
+     font-size: 1.6em;
+}
+
+#container7 #specialDealsContainer .boxDeals article aside .starContainerDeals {
+     width: 100%;
+     height: 20px;
+     display: flex;
+     justify-content: center;
+     margin-top: 2%;
+}
+
+#container7 #specialDealsContainer .boxDeals article aside .starContainerDeals img{
+     width: 5%;
+     height: auto;
+}
+
+#container7 #specialDealsContainer .boxDeals article aside .contentDeals {
+     width: 60%;
+     margin-top: 5%;
+}
+
+#container7 #specialDealsContainer .boxDeals article aside .contentDeals article {
+     height: 5vh;
+     display: grid;
+     grid-template-columns: 30% auto;
+     font-family: sans-serif;
+     color: #333;
+     margin-top: 3%;
+}
+
+#container7 #specialDealsContainer .boxDeals article aside .contentDeals article p {
+     align-self: center;
+}
+
+#container7 #specialDealsContainer .boxDeals article aside .contentDeals article img{
+     width: 55%;
+     height: 100%;
+     justify-self: center;
+}
+
+#container7 #specialDealsContainer .boxDeals article aside h4{
+     font-family: Roboto, sans-serif;
+     font-size: 1em;
+     margin-top: 8%;
+}
+
+#container7 #specialDealsContainer .boxDeals article aside h4 span{
+     font-family: 'Arvo', serif;
+     color: rgb(255, 113, 97);
+}
+
+#container7 #specialDealsContainer button {
+     padding: 20px;
+     border-radius: 50px;
+     cursor: pointer;
+     outline: none;
+     background-color: #F90F00;
+     color: white;
+     border: 0px;
+     font-size: 1.1em;
 }
