Menambahkan project halaman our story 60%

--- a/style/mobile2.css
+++ b/style/mobile2.css
@@ -66,6 +66,8 @@
                grid-template-columns: 80% !important;
                margin-top: 15%;
           }
+
+          #container8 img {width: 70% !important; }
 }
 
 @media only screen 
