--- a/style/desktop3.css
+++ b/style/desktop3.css
@@ -7,10 +7,6 @@
      padding: 0px;
 }
 
-body {
-     height: 2000px;
-}
-
 header {
      background: none;
      padding: 0px;
@@ -66,6 +62,7 @@ main section:last-child p {
 
 #containerV3_1 {
      width: 100%;
+     height: auto;
      display: grid;
      grid-template-columns: repeat(auto-fill, 100%);
      margin-top: 3%;
@@ -139,4 +136,44 @@ main section:last-child p {
 
 #containerV3_1 section #imgContent3 {
      background: url('../img/story/story3.jpg');
+}
+
+#containerV3_2 {
+     width: 100%;
+     background-color: #073E52;
+     padding: 50px;
+     box-sizing: border-box;
+     text-align: center;
+     color: #F8EFDB;
+     margin-top: 7%;
+}
+
+#containerV3_2 h1{
+     font-family: 'Bungee Inline', cursive;
+     font-size: 2.3em;
+}
+
+#containerV3_2 aside {
+     display: grid;
+     grid-template-columns: repeat(4, 20%);
+     justify-content: center;
+     gap: 30px;
+     margin-top: 5%;
+}
+
+#containerV3_2 section{
+     width: 100%;
+     height: 100%;
+}
+
+#containerV3_2 aside p{ 
+     font-size: 1.5em;
+     line-height: 35px;
+     font-family: "IskraW01-Regular";
+     margin-top: 5%;
+     font-weight: 100;
+}
+
+#containerV3_2 section img{
+     width: 70%;
 }
