Done halaman our story 100% part 23

--- a/style/mobile3.css
+++ b/style/mobile3.css
@@ -64,6 +64,10 @@
           #containerV3_2 section{
                margin-top: 5%;
           }
+
+          #containerV3_2 aside p{ 
+               font-size: 1.5em;
+          }
 }
 
 @media only screen
