Clear, tinggal halaman login

--- a/style/desktop1.css
+++ b/style/desktop1.css
@@ -7,6 +7,11 @@ body {
      height: auto;
 }
 
+::selection {
+     background: #e18d2a;
+     color: #ffffff !important;
+}
+
 /* ------------------------- CONTENT 1  ------------------------- */
 
 header {
